Add ALPS annotations to resources
